# dance-bot

./: .gitignore  README.md  index.html  pyproject.toml
.claude/plans/: mvp.md
.claude/reports/: 2026-06-19-state.md
.github/workflows/: deploy-pages.yml
dev_docs/: README.md  TODO.md  architecture.md  locations.md  logging.md  setup.md
prompts/: extract_event.md
scripts/: com.user.dance-bot.plist  google_login.py  launchd_disable.sh  launchd_enable.sh  login.py  run_dance_bot.sh  update_index_branch.sh
src/dance_bot/: calendar_sync.py  config.py  db.py  extractor.py  fetch_messages.py  filters.py  main.py  parse_events.py  parse_messages.py  sync_calendar.py  telegram_log.py
src/dance_bot/filters/: telegram.py
